crates/pandalang/src/snapshots/pandalang__parser__tests__parses@parens__parens1.panda.snap
---
source: crates/pandalang/src/parser.rs
expression: test(path)
input_file: crates/pandalang/src/snapshot_inputs/parens/parens1.panda
---
Ok(
    Int(
        Int {
            n: 0,
        },
    ),
)
