crates/pandalang/src/snapshots/pandalang__parser__tests__parses@parens__parens4.panda.snap
---
source: crates/pandalang/src/parser.rs
expression: source
input_file: crates/pandalang/src/snapshot_inputs/parens/parens4.panda
---
BinOp(
    BinOp {
        left: BinOp(
            BinOp {
                left: Var(
                    Var {
                        name: "a",
                    },
                ),
                right: BinOp(
                    BinOp {
                        left: Var(
                            Var {
                                name: "b",
                            },
                        ),
                        right: Var(
                            Var {
                                name: "c",
                            },
                        ),
                        kind: Mul,
                    },
                ),
                kind: Add,
            },
        ),
        right: BinOp(
            BinOp {
                left: Var(
                    Var {
                        name: "d",
                    },
                ),
                right: Var(
                    Var {
                        name: "e",
                    },
                ),
                kind: Div,
            },
        ),
        kind: Sub,
    },
)
