crates/pandalang/src/snapshots/pandalang__parser__tests__parses@parens__parens5.panda.snap
---
source: crates/pandalang/src/parser.rs
expression: test(path)
input_file: crates/pandalang/src/snapshot_inputs/parens/parens5.panda
---
Ok(
    BinOp(
        BinOp {
            left: BinOp(
                BinOp {
                    left: Var(
                        Var {
                            name: "a",
                        },
                    ),
                    right: BinOp(
                        BinOp {
                            left: Var(
                                Var {
                                    name: "b",
                                },
                            ),
                            right: BinOp(
                                BinOp {
                                    left: Var(
                                        Var {
                                            name: "c",
                                        },
                                    ),
                                    right: Var(
                                        Var {
                                            name: "d",
                                        },
                                    ),
                                    kind: Sub,
                                },
                            ),
                            kind: Mul,
                        },
                    ),
                    kind: Add,
                },
            ),
            right: Var(
                Var {
                    name: "e",
                },
            ),
            kind: Div,
        },
    ),
)
